--- a/templates/newsletter/html.html
+++ b/templates/newsletter/html.html
@@ -5,100 +5,18 @@
     <a href="<%= locals.url %>/response/<%= locals.email %>/1">Responder</a>
   </li>
 </ul>-->
-
+<form action="https://docs.google.com/forms/d/1uj1wZI-X9ZyMs4Zoelw9QVS8ACezeu1q6fCIEyLNvHo/formResponse" method="POST">
 <input type="text" id="myP1"></input>
-<input type="button" onclick="alert('Alert')" value="Alert">
+<!--<input type="button" onclick="alert('Alert')" value="Alert">
 <input type="button" onclick="document.getElementById('link').href='http://localhost:8080/response/martinpielvitori@gmail.com/'+document.getElementById('myP1').value;document.getElementById('link').click();" value="Modifica y ejecuta link">
 
-<a href="http://localhost:8080/response/martinpielvitori@gmail.com/" id="link">Responder</a>
+<a href="http://localhost:8080/response/martinpielvitori@gmail.com/" id="link">Responder</a>-->
 
-<!-- -->
 
-<form action="<%=locals.url%>/observaciones" method="POST">
-  <ol role="list">
-    <div role="listitem">
-      <div dir="auto" style="margin:12px 0">
-        <div style="margin-bottom:1.5em;vertical-align:middle;margin-left:0;margin-top:0;max-width:100%">
-          <label>
-            <div style="display:block;font-weight:bold;margin-top:.83em;margin-bottom:.83em">Campo
-              <label aria-label="(Required field)"></label>
-              <span aria-hidden="" style="color:#c43b1d">*</span>
-            </div>
-            <div dir="auto" style="display:block;margin:.1em 0 .25em 0;color:#666"></div>
-          </label>
-          <input type="text" name="campo" id="campo" dir="auto" aria-label="Campo" title="">
-        </div>
-      </div>
-    </div>  
-    <div role="listitem">
-      <div dir="auto" style="margin:12px 0">
-        <div style="margin-bottom:1.5em;vertical-align:middle;margin-left:0;margin-top:0;max-width:100%">
-          <label> 
-            <div style="display:block;font-weight:bold;margin-top:.83em;margin-bottom:.83em">Combo
-              <label aria-label="(Required field)"></label>
-              <span aria-hidden="" style="color:#c43b1d">*</span>
-            </div>
-            <div dir="auto" style="display:block;margin:.1em 0 .25em 0;color:#666">Help</div>
-          </label>
-          <select name="combo" aria-label="Combo Help " aria-required="">
-            <option value=""></option>
-            <option value="Option1">Option 1</option>
-            <option value="Option2">Option 2</option> 
-            <option value="Option3">Option 3</option> 
-            <option value="Option4">Option 4</option>
-          </select>
-        </div>
-      </div>
-    </div> 
-    <div role="listitem">
-      <div dir="auto" style="margin:12px 0">
-        <div style="margin-bottom:1.5em;vertical-align:middle;margin-left:0;margin-top:0;max-width:100%">
-          <label>
-            <div style="display:block;font-weight:bold;margin-top:.83em;margin-bottom:.83em">Multiple choice</div>
-            <div dir="auto" style="display:block;margin:.1em 0 .25em 0;color:#666"></div>
-          </label>
-          <ul role="radiogroup" aria-label="Multiple choice  " style="list-style:none;padding:0;margin:.5em 0 0">
-            <li style="margin:0;line-height:1.3em;padding-bottom:.5em">
-              <label>
-                <span style="display:inline-block">
-                  <input type="radio" name="radio" value="Option1" role="radio" aria-label="Option 1">
-                </span>
-                <span>Option 1</span>
-              </label>
-            </li> 
-            <li style="margin:0;line-height:1.3em;padding-bottom:.5em">
-              <label>
-                <span style="display:inline-block">
-                  <input type="radio" name="radio" value="Option2" role="radio" aria-label="Option 2">
-                </span>
-                <span>Option 2</span>
-              </label>
-            </li> 
-            <li style="margin:0;line-height:1.3em;padding-bottom:.5em">
-              <label>
-                <span style="display:inline-block">
-                  <input type="radio" name="radio" value="Option3" role="radio" aria-label="Option 3">
-                </span>
-                <span>Option 3</span>
-              </label>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <input type="hidden" name="socio" value="<%= locals.socio %>">
-    <input type="hidden" name="email" value="<%= locals.email %>">
-    
-    <div style="margin:12px 0">
-      <table>
-        <tbody>
-          <tr>
-            <td dir="ltr" style="margin-bottom:1.5em;vertical-align:middle;margin-left:0;margin-top:0;max-width:100%;display:inline-block">
-              <input type="submit" name="submit" value="Submit">
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </ol>
+<input type="hidden" name="abc" value="22222222222">
+C<input type="text" name="entry.70882562">C
+
+<input type="submit" name="submit" value="Submit">
+
+
 </form>
