--- a/templates/newsletter/htmlOKCleanMail.html
+++ b/templates/newsletter/htmlOKCleanMail.html
@@ -15,7 +15,6 @@
           </a>
         </h4>
       </div>
-
       <div id="collapseOne" class="panel-collapse collapse in" style="color: #000 !important; text-shadow: none !important; -webkit-box-shadow: none !important; box-shadow: none !important; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; display: block;">
         <div class="panel-body" style="color: #000 !important; text-shadow: none !important; -webkit-box-shadow: none !important; box-shadow: none !important; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; border-top-color: #ddd; padding: 15px;">
           <style>
@@ -48,21 +47,18 @@
               <td></td>
               <td></td>
               <td>
-                <form action="<%=locals.gform%>" method="POST">
-                  <input type="hidden" name="entry.70882562" value="<%=locals.socio%>">
-                  <input type="hidden" name="entry.485680763" value="<%=locals.email%>">
-                  <input type="hidden" name="entry.1849237969" value="<%=locals.url%>">                  
+                <form action="https://docs.google.com/forms/d/1uj1wZI-X9ZyMs4Zoelw9QVS8ACezeu1q6fCIEyLNvHo/formResponse" method="POST">
+                  <input type="hidden" name="entry.70882562" value="Pepe">
+                  <input type="hidden" name="entry.485680763" value="email">
                   <input style="margin-bottom:-8px" type="image" name="submit" src="http://waspsda.org/wp-content/plugins/wimvideopro/images/glyphicons/glyphicons_078_warning_sign.png" alt="Descargo" width="20" height="20">
                 </form>                
               </td>
             </tr>
           </table>
         </div>
-        <span style="padding:5px;">Realizar descargo presionando en la imagen o directamente desde <a href="<%=gformlink%>?entry.1849237969=<%=locals.url%>&entry.70882562=<%=locals.socio%>&entry.485680763=<%=locals.email%>" target="_blank">Google Forms</a>
+        <span style="padding:5px;">Realizar descargo presionando en la imagen o directamente desde <a href="https://docs.google.com/forms/d/1uj1wZI-X9ZyMs4Zoelw9QVS8ACezeu1q6fCIEyLNvHo/viewform?entry.70882562=lalala" target="_blank">Google Forms</a>
         </span>
       </div>
-
-
     </div> 
   
 </div> <!-- end container -->
